<resources>
    <string name="ver">버전 1.0.0 - release 01</string>
    <string name="signup">회원가입</string>
    <string name="signin">로그인</string>
    <string name="app_name">Project</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="pw">비밀번호</string>
    <string name="pwok">비밀번호 확인</string>
    <string name="pwequal">비밀번호가 일치합니다.</string>
    <string name="changepw">비밀번호 변경</string>
    <string name="logout">로그아웃</string>
    <string name="secession">회원 탈퇴</string>
    <string name="connection">연결 코드</string>
    <string name="odsay_key">BTj4eHimPxwKZbV5+oe+2kqSiME02T3/sXQZAh/ZjRk</string>
    <string name="menu">메뉴</string>
    <string name="map">지도확인</string>
    <string name="search">검색</string>
    <string name="idok">아이디 중복 확인</string>
    <string name="guard">저는 보호자입니다.</string>
    <string name="ward">저는 보호자가 아닙니다.</string>
</resources>
